tests/compilation_test_sources/struct_violates_trait_derives_after_must_implement.rs
use must_implement_trait::must_implement_trait;
use std::rc::Rc;

fn main() {
    let instance = MySendStruct { value: 7 };
    let _other = instance.clone();
}

#[must_implement_trait(Send)]
#[derive(Clone)]
struct MySendStruct {
    value: Rc<i32>
}